# StockPrediction

./: .gitignore  README.md  log.txt  nginx.conf  package.json  symbols.md
data/: .gitignore  big_symbols.csv  symbols.csv  symbols.md
explore/: findTrends.R
extract/: findTradingIndexes.js  pDownloadAllSymbols.js  pDownloadTickerSymbolData.js  symbols.csv
graph/: graph.R
lib/: findTradingIndexes.js  pDownloadTickerSymbolData.js
lib/R/: associateFeatures.R  ema.R  findBuyIndexes.R  growth.R  loadPreppedData.R  sma.R
train/: lib  prepData.R  train.R
train/c/: .gitignore  CMakeLists.txt  combine.sh  eval.c  train.c  transform.js  xor_float.net
transform/: labelData.R  lib  pTickerSymbolDataToCsv.js  pTradingIndexesToCsv.js
www/: CJES.json  index.html  index.js
